plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.4'
    id 'io.spring.dependency-management' version '1.1.7'
    id "io.sentry.jvm.gradle" version "5.4.0"
}

sentry {
    includeSourceContext = true

    org = "dajava"
    projectName = "java-spring-boot"
    authToken = System.getenv("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")
}

group = 'com.dajava'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework:spring-test'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'com.h2database:h2'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.1'
    // webclient 의존성
    implementation 'org.springframework.boot:spring-boot-starter-webflux'


    // json 처리
    implementation("org.json:json:20250107")

    // IO 유틸
    implementation("commons-io:commons-io:2.18.0")

    // env
    implementation 'me.paulschwarz:spring-dotenv:3.0.0'

    //ES
    implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'

    // Caffeine Cache
    implementation("org.springframework.boot:spring-boot-starter-cache")
    implementation("org.springframework:spring-context-support")
    implementation("com.github.ben-manes.caffeine:caffeine:3.2.0")

    implementation 'org.springframework.boot:spring-boot-starter-security'
    // redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

    // sentry
    implementation 'io.sentry:sentry-spring-boot-starter:7.3.0'
}

test {
    useJUnitPlatform()
}
tasks.named('test') {
    useJUnitPlatform()
}
